trunk/Archive2/e1/f91400c7bff05e/output
main.cpp: In function 'int main()':
main.cpp:10:10: error: too many braces around initializer for 'int' [-fpermissive]
   f({{1}}); // f(A(1)) should be printed, not f(1)
          ^
